--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="webring.html"
     I love cars. 
     <h1>I also like playing soccer</h1>
     <h2>1738 i see your eyes watching me</h2>
