--- a/joshuaquiz.html
+++ b/joshuaquiz.html
@@ -10,8 +10,10 @@
 
 <h2>I like cars</h2>
 
-<ol><em> <h3>biking and <strong>Driving</strong> are some of my interests</em> </h3> </ol>
-<ol>2.and want to </ol>
+<ol><em> <h3>1.biking and <strong>Driving</strong> are some of my interests</em> </h3> </ol>
+<ol><em>2.and want to go to Italy</em> </ol>
+
+<h1>Peace !</h1>
 
 
 </body>
