--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="webring.html"
-    I love cars. 
-    <h1>I also like playing soccer</h1>
-    <h2>1738 i see your eyes watching me</h2>
+    <a href="webring.html">
+    I love cars.</a>
+
+    <p>I also like playing soccer.</p> </h1>
+    <P>17.38 i see your eyes watching me</h2></p>
 </body>
 </html>
 
 
-  git config --global user.email "tatinobelo@gmail.com"
+  <p>git config --global user.email "tatinobelo@gmail.com"</p>
   git config --global user.name "tatino08"
