--- a/webring.html
+++ b/webring.html
@@ -6,8 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <p>this is a paragraph</p>
-    <ol> <li>
+    <img src="icon0.avif"
+  <h></h> <h3> 17.38, ayy
+I'm like, "hey, what's up, hello"
+Seen yo pretty ass soon as you came in the door
+I just wanna chill, got a sack for us to roll
+Married to the money, introduced her to my stove</h3>
+<pre>
+      .-""""-.
+     / -   -  \
+    |  .-. .- |
+    |  \o| |o (
+    \     ^    \
+     '.  )--'  /
+jgs    '-...-'`"    </pre>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Zfz-_W70krE?si=L7X9nmF6k9bNFGPH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         this i second li is inside the list
     </li>
     <li>this is li is inside the list</li>
